<resources>
    <string name="app_name">SIT305 Quiz App</string>
    <string name="enter_name">Enter your name:</string>
    <string name="start_button">START</string>
    <string name="welcome_string">Welcome to the quiz!</string>
    <string name="question_number">1/5</string>

    <string name="congratulations_string">Congratulations!</string>
    <string name="your_score_string">Your score:</string>
    <string name="score_string">Score</string>
    <string name="new_quiz_string">Take New Quiz</string>
    <string name="finish_string">Finish</string>

    <string name="submit_button_string">Submit</string>
    <string name="next_button_string">Next</string>

    <string-array name="firstQ">
        <item>Sports</item>
        <item>In which city were the 2000 Summer Olympics held?</item>
        <item>Sydney</item>
        <item>London</item>
        <item>Barcelona</item>
        <item>1</item>
    </string-array>

    <string-array name="secondQ">
        <item>Chemistry</item>
        <item>Which chemical element has Ag as a symbol?</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Iron</item>
        <item>2</item>
    </string-array>

    <string-array name="thirdQ">
        <item>Geography</item>
        <item>Which country does not share a border with Romania?</item>
        <item>Ukraine</item>
        <item>Bulgaria</item>
        <item>Poland</item>
        <item>3</item>
    </string-array>

    <string-array name="fourthQ">
        <item>Movies</item>
        <item>In The Lion King, who is Simba’s uncle?</item>
        <item>Mufasa</item>
        <item>Zazu</item>
        <item>Scar</item>
        <item>3</item>
    </string-array>

    <string-array name="fifthQ">
        <item>Literature</item>
        <item>What is the name of the main character in Pride and Prejudice?</item>
        <item>Elizabeth Bennet</item>
        <item>Bernadette Smith</item>
        <item>Poppy Williams</item>
        <item>1</item>
    </string-array>
</resources>
