<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/congratulationsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulations_string"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yourScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/your_score_string"
        android:textSize="18dp"
        android:textColor="#4C4C4C" />
    <TextView
        android:id="@+id/finalScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/score_string"
        android:textColor="#4C4C4C" />

    <Button
        android:id="@+id/newQuizButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="promptNewQuiz"
        android:text="@string/new_quiz_string" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="finishQuiz"
        android:text="@string/finish_string" />
</LinearLayout>
